# docs/swagger.json
@@ -4,18 +4,85 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "Flowbot Chatbot API",
-        "title": "Flowbot API",
+        "description": "Bussiness API",
+        "title": "Bussiness API",
         "contact": {},
         "license": {
-            "name": "GPL 3.0",
-            "url": "https://github.com/sysatom/framework/blob/master/LICENSE"
+            "name": "Private"
         },
         "version": "1.0"
     },
     "host": "localhost:6060",
-    "basePath": "/service",
-    "paths": {},
+    "basePath": "/",
+    "paths": {
+        "/hello/{id}": {
+            "get": {
+                "description": "get string by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Show an account",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.WorkflowTask"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "types.KV": {
+            "type": "object",
+            "additionalProperties": true
+        },
+        "types.WorkflowTask": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "conn": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "describe": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "params": {
+                    "$ref": "#/definitions/types.KV"
+                },
+                "vars": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        }
+    },
     "securityDefinitions": {
         "ApiKeyAuth": {
             "description": "access token",
